[workspace]

members = [
    "csvb",
    "csvb-engine",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
arrow = "53"
chrono = "0.4"
clap = { version = "4.3.19", features = ["derive"]}
datafusion = "42.0.0"
futures = "0.3.30"
itertools = "0.13"
lazy_static= "1.4"
log = "0.4"
pretty_assertions = "1.4.1"
rand = "0.8.5"
regex = "1.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.12.0"
thiserror = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
url = "2.2"

csvb-engine = { path = "./csvb_engine" }
