module(
    name = "csvb",
    repo_name = "csvb",
)

bazel_dep(name="platforms", version="0.0.10")

################################################################################
# Utilities ####################################################################
################################################################################

# Helpers
bazel_dep(name = "aspect_bazel_lib", version = "2.7.7", dev_dependency = True)

# Packaging
bazel_dep(name = "rules_pkg", version = "1.0.1", dev_dependency = True)

# Platform-indepedent CC toolchain
bazel_dep(name = "toolchains_musl", version = "0.1.16", dev_dependency = True)

# OCI containers
bazel_dep(name = "rules_oci", version = "2.0.0")

################################################################################
# Python #######################################################################
################################################################################

bazel_dep(name = "rules_python", version = "0.36.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    # sha256 = "05d1933f0a5ba7d8d6296bb6d5018e7c94fa473ceb10cf198a92ccea19c27b53",
    is_default = True,
    configure_coverage_tool = True,
)
use_repo(python, "python_3_12", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock_3_12.txt",
)
use_repo(pip, "pip")

################################################################################
# Rust #########################################################################
################################################################################

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_rust", version = "0.53.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions=["1.82.0"],
    extra_target_triples=["x86_64-unknown-linux-musl"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate_index = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate_index.spec(package = "anyhow", version = "1.0")
crate_index.spec(package = "arrow", version = "53", features = ["prettyprint"])
crate_index.spec(package = "async-trait", version = "0.1.85")
crate_index.spec(package = "chrono", version = "0.4")
crate_index.spec(package = "clap", version = "4.3.19", features = ["derive"])
crate_index.spec(package = "datafusion", version = "44.0.0")
crate_index.spec(package = "futures", version = "0.3.30")
crate_index.spec(package = "itertools", version = "0.13")
crate_index.spec(package = "lazy_static", version= "1.4")
crate_index.spec(package = "log", version = "0.4")
crate_index.spec(package = "object_store", version = "0.11.2", features = ["aws"] )
crate_index.spec(package = "pretty_assertions", version = "1.4.1")
crate_index.spec(package = "rand", version = "0.8.5")
crate_index.spec(package = "regex", version = "1.5")
crate_index.spec(package = "serde", version = "1.0", features = ["derive"])
crate_index.spec(package = "serde_json", version = "1.0")
crate_index.spec(package = "simplelog", version = "0.12.0")
crate_index.spec(package = "thiserror", version = "1.0")
crate_index.spec(package = "tokio",  version = "1.40.0", features = ["full"])
crate_index.spec(package = "tokio-util",  version = "0.7.13", features = ["full"])
crate_index.spec(package = "url", version = "2.2")

crate_index.from_specs(name = "crate_index")
use_repo(crate_index, "crate_index")

