load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "csvb",
    srcs = glob(["src/**/*.rs"], exclude=["src/bin/*"]),
    data = [],
    deps = [
        "@crate_index//:anyhow",
        "@crate_index//:arrow",
        "@crate_index//:chrono",
        "@crate_index//:clap",
        "@crate_index//:datafusion",
        "@crate_index//:futures",
        "@crate_index//:itertools",
        "@crate_index//:log",
        "@crate_index//:object_store",
        "@crate_index//:pretty_assertions",
        "@crate_index//:rand",
        "@crate_index//:regex",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:simplelog",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
        "@crate_index//:tokio-util",
        "@crate_index//:url",
    ],
)

rust_test(
    name = "csvb_test",
    crate = ":csvb",
    deps = [
        "@crate_index//:pretty_assertions",
        "@crate_index//:tokio",
    ],
)

rust_binary(
    name = "bin",
    srcs = ["src/bin/csvb.rs"],
    deps = [
        ":csvb",
    ] + [
        "@crate_index//:anyhow",
        "@crate_index//:arrow",
        "@crate_index//:chrono",
        "@crate_index//:clap",
        "@crate_index//:datafusion",
        "@crate_index//:futures",
        "@crate_index//:itertools",
        "@crate_index//:log",
        "@crate_index//:object_store",
        "@crate_index//:pretty_assertions",
        "@crate_index//:rand",
        "@crate_index//:regex",
        "@crate_index//:serde",
        "@crate_index//:serde_json",
        "@crate_index//:simplelog",
        "@crate_index//:thiserror",
        "@crate_index//:tokio",
        "@crate_index//:url",
    ],
)

pkg_tar(
    name = "tar",
    srcs = [
        ":bin",
    ],
)

platform_transition_filegroup(
    name = "linux_tarball",
    srcs = [":tar"],
    target_platform = "//bazel/config/platform/rust:linux_x86_64",
)

oci_image(
    name = "oci",
    os = "linux",
    architecture = "x86_64",
    tars = [
        ":linux_tarball",
    ],
)

oci_load(
    name = "load_to_local_docker",
    image = ":oci",
    repo_tags = ["csvb:latest"],
)
